[gd_scene load_steps=15 format=3 uid="uid://dv18v8slpbscd"]

[ext_resource type="Texture2D" uid="uid://dafom1u772qal" path="res://assets/Main Characters/2 Owlet_Monster/Owlet_Monster_Death_8.png" id="1_fowgs"]
[ext_resource type="Script" uid="uid://d14yg0nbdtge5" path="res://scripts/corpse_sprite.gd" id="2_utent"]
[ext_resource type="AudioStream" uid="uid://wg6yw663jkk3" path="res://assets/Sounds/vanish.ogg" id="3_tusyx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fowgs"]
atlas = ExtResource("1_fowgs")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_utent"]
atlas = ExtResource("1_fowgs")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tusyx"]
atlas = ExtResource("1_fowgs")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2t32"]
atlas = ExtResource("1_fowgs")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cmyh"]
atlas = ExtResource("1_fowgs")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eopqd"]
atlas = ExtResource("1_fowgs")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_558jw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fowgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utent")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tusyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2t32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cmyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eopqd")
}],
"loop": false,
"name": &"vanish",
"speed": 7.0
}]

[sub_resource type="Animation" id="Animation_vkeb6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yo48a"]
resource_name = "blink"
length = 3.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.501961)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0lpm6"]
_data = {
&"RESET": SubResource("Animation_vkeb6"),
&"blink": SubResource("Animation_yo48a")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tusyx"]
size = Vector2(21.5, 15.5)

[node name="CorpseSprite" type="AnimatedSprite2D"]
scale = Vector2(2.20117, 2.20117)
sprite_frames = SubResource("SpriteFrames_558jw")
animation = &"vanish"
script = ExtResource("2_utent")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0lpm6")
}
autoplay = "blink"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.75, 5.25)
shape = SubResource("RectangleShape2D_tusyx")

[node name="VanishSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_tusyx")

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
